--- a/cjl_trade_market/index.html
+++ b/cjl_trade_market/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="renderer" content="webkit">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="telephone=no" name="format-detection">
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
