--- a/cjl_trade_market/index.html
+++ b/cjl_trade_market/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="renderer" content="webkit">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="telephone=no" name="format-detection">
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
