第一次更新

--- a/vic_tribe/index.html
+++ b/vic_tribe/index.html
@@ -9,10 +9,11 @@
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
   <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_498339_60o0ufguk9a.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css">
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script src="//cdn.bootcss.com/vue-router/2.5.3/vue-router.min.js"></script>
   <title>vue_base</title>
 </head>
 
