--- a/vic_tribe/index.html
+++ b/vic_tribe/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="telephone=no" name="format-detection" />
+    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache, must-revalidate" />
+    <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"
+    />
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/font_498339_60o0ufguk9a.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <title>vue_base</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta content="yes" name="apple-mobile-web-app-capable">
-  <meta content="telephone=no" name="format-detection">
-  <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <meta http-equiv="pragma" content="no-cache">
-  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
-  <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_498339_60o0ufguk9a.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="//cdn.bootcss.com/vue-router/2.5.3/vue-router.min.js"></script>
-  <title>vue_base</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
