--- a/trade_new_v1/index.html
+++ b/trade_new_v1/index.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="//at.alicdn.com/t/font_498339_60o0ufguk9a.css">
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script src="https://unpkg.com/element-ui@2.4.9/lib/index.js"></script>
+  <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
+  <script src="//unpkg.com/element-ui/lib/umd/locale/zh-CN.js"></script>
+  <script src="//unpkg.com/element-ui/lib/umd/locale/en.js"></script>
   <title>vue_base</title>
 </head>
 
