测试版本提交2018 12-29

--- a/trade_new/index.html
+++ b/trade_new/index.html
@@ -12,6 +12,8 @@
   <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
   <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+  <link rel="icon" href="./static/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./static/css/common.css">
   <link rel="stylesheet" href="./static/css/aliFont.css">
   <link rel="stylesheet" href="https://unpkg.com/element-ui@2.4.9/lib/theme-chalk/index.css">
