--- a/trade_new/static/download.html
+++ b/trade_new/static/download.html
@@ -103,7 +103,7 @@
         height: 100%;
         min-height: 700px;
         margin: auto;
-        background: url("./img/bg.png") no-repeat;
+        background: url("./img/bg.jpg") no-repeat;
         background-size: cover;
         position: relative;
       }
