--- a/mscoin_trade/static/download.html
+++ b/mscoin_trade/static/download.html
@@ -120,7 +120,7 @@
       <a href="javasprict::void(0)" class="download_ios">
         <img src="./img/ios_btn.png" alt="" srcset="">
       </a>
-      <a href="javasprict::void(0)" class="download_android">
+      <a href="binmark.apk" class="download_android">
         <img src="./img/android_btn.png" alt="" srcset="">
       </a>
     </div>
