--- a/mscoin_trade/static/download.html
+++ b/mscoin_trade/static/download.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -43,16 +43,20 @@
     }
 
     .logo_box {
-      width: 60%;
-      margin: auto;
-      padding: 10vh 5vw;
+      width: 90px;
+      position: absolute;
+      box-sizing: border-box;
+      bottom: 5%;
+      left: 50%;
+      transform: translateX(-50%);
+
     }
 
     .download_box_div {
       width: 60%;
       left: 20%;
       position: absolute;
-      top: 70vh;
+      top: 46vh;
       z-index: 10;
     }
 
@@ -82,7 +86,7 @@
         min-height: 560px;
         margin: auto;
         background: url("./img/bg.jpg") no-repeat;
-        background-size: 100% 100%;
+        background-size: 100% auto;
         position: relative;
         text-align: center;
       }
@@ -113,14 +117,14 @@
 
 <body>
   <div class="download_box">
-    <!-- <div class="logo_box">
+    <div class="logo_box">
       <img src="./img/logo.png" alt="">
-    </div> -->
+    </div>
     <div class="download_box_div">
       <a href="javasprict::void(0)" class="download_ios">
         <img src="./img/ios_btn.png" alt="" srcset="">
       </a>
-      <a href="binmark.apk" class="download_android">
+      <a href="MScoin.apk" class="download_android">
         <img src="./img/android_btn.png" alt="" srcset="">
       </a>
     </div>
