--- a/mscoin_trade/static/download.html
+++ b/mscoin_trade/static/download.html
@@ -6,7 +6,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="./js/jquery-1.11.1.min.js"></script>
-  <title>Binmark App下载页</title>
+  <title>MScoin App下载页</title>
   <style>
     * {
       margin: 0;
