--- a/binmark_trade_mobile/mscoinmobile/index.html
+++ b/binmark_trade_mobile/mscoinmobile/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta content=yes name=apple-mobile-web-app-capable><meta content="telephone=no" name=format-detection><meta http-equiv=Access-Control-Allow-Origin content=*><meta http-equiv=pragma content=no-cache><meta http-equiv=Cache-Control content="no-cache, must-revalidate"><meta http-equiv=expires content="Wed, 26 Feb 1997 08:21:57 GMT"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><link rel="shortcut icon" type=image/x-icon href=./static/favicon.ico><link rel=stylesheet href=http://at.alicdn.com/t/font_895461_lqlqfeip2ff.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css><script src=https://cdn.jsdelivr.net/npm/vue></script><link href=./mbstatic/css/app.badccbe21649e3bac619f2bf95770594.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./mbstatic/js/manifest.2ab5d5b8b6fb84ac92ec.js></script><script type=text/javascript src=./mbstatic/js/vendor.557f66741b7a56ab0655.js></script><script type=text/javascript src=./mbstatic/js/app.de7a77d6076996fa35bf.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta content=yes name=apple-mobile-web-app-capable><meta content="telephone=no" name=format-detection><meta http-equiv=Access-Control-Allow-Origin content=*><meta http-equiv=pragma content=no-cache><meta http-equiv=Cache-Control content="no-cache, must-revalidate"><meta http-equiv=expires content="Wed, 26 Feb 1997 08:21:57 GMT"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><link rel="shortcut icon" type=image/x-icon href=./static/favicon.ico><link rel=stylesheet href=http://at.alicdn.com/t/font_895461_lqlqfeip2ff.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css><script src=https://cdn.jsdelivr.net/npm/vue></script><script>function goPAGE() {
+      if ((navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
+        window.location.href = "../wap/index.html";
+      }
+      else {
+        window.location.href = "../web/index.html";
+      }
+    };
+    goPAGE();
+    window.onresize = function () {
+      goPAGE();
+    }</script><link href=./mbstatic/css/app.5af5a35008b875fc2dd09a586721e74b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./mbstatic/js/manifest.677cdcd43b1c441a3b98.js></script><script type=text/javascript src=./mbstatic/js/vendor.ccd6671cddc8677a08b4.js></script><script type=text/javascript src=./mbstatic/js/app.67b4cbd089d0920258f4.js></script></body></html>
