--- a/binmark_trade_mobile/index.html
+++ b/binmark_trade_mobile/index.html
@@ -14,6 +14,20 @@
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_895461_lqlqfeip2ff.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css" />
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script>
+    function goPAGE() {
+      if ((navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
+        window.location.href = "../wap/index.html";
+      }
+      else {
+        window.location.href = "../web/index.html";
+      }
+    };
+    goPAGE();
+    window.onresize = function () {
+      goPAGE();
+    }
+  </script>
 </head>
 
 <body>
