--- a/mscoin_trade/index.html
+++ b/mscoin_trade/index.html
@@ -21,6 +21,20 @@
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://unpkg.com/element-ui@2.4.9/lib/index.js"></script>
   <title></title>
+  <script>
+    function goPAGE() {
+      if ((navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
+        window.location.href = "../wap/index.html";
+      }
+      else {
+        window.location.href = "../web/index.html";
+      }
+    }
+    goPAGE();
+    window.onresize = function () {
+      goPAGE();
+    }
+  </script>
 </head>
 
 <body>
