--- a/binmark_trade_mobile/index.html
+++ b/binmark_trade_mobile/index.html
@@ -16,10 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script>
     function goPAGE() {
-      if ((navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
-        window.location.href = "../wap/index.html";
-      }
-      else {
+      if (!(navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i))) {
         window.location.href = "../web/index.html";
       }
     };
