--- a/vic_tribe/index.html
+++ b/vic_tribe/index.html
@@ -10,6 +10,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, must-revalidate" />
   <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes viewport-fit=cover" />
+  <link rel="stylesheet" href="./static//css//common.css">
   <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico">
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_895461_lqlqfeip2ff.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@1.4/lib/index.css" />
