--- a/binmark_trade_mobile/mscoinmobile/mbstatic/download.html
+++ b/binmark_trade_mobile/mscoinmobile/mbstatic/download.html
@@ -6,7 +6,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="./js/jquery-1.11.1.min.js"></script>
-  <title>MScoin App下载页</title>
+  <title>AMCoin App下载页</title>
   <style>
     * {
       margin: 0;
@@ -121,10 +121,10 @@
       <img src="./img/logo.png" alt="">
     </div>
     <div class="download_box_div">
-      <a href="MScoin.ios" class="download_ios">
+      <a href="AMCoin.ios" class="download_ios">
         <img src="./img/ios_btn.png" alt="" srcset="">
       </a>
-      <a href="MScoin.apk" class="download_android">
+      <a href="AMCoin.apk" class="download_android">
         <img src="./img/android_btn.png" alt="" srcset="">
       </a>
     </div>
