--- a/mscoin_trade/mscoin/pcstatic/download.html
+++ b/mscoin_trade/mscoin/pcstatic/download.html
@@ -42,15 +42,19 @@
     }
 
     .logo_box {
-      width: 160px;
-      box-sizing: border-box;
-      margin: 8% auto auto;
+      width: 90px;
+      position: absolute;
+      bottom: 5%;
+      left: 50%;
+      transform: translateX(-50%)
     }
 
     .download_box_div {
       width: 60%;
       left: 20%;
-      margin: 62vh auto auto;
+      position: absolute;
+      top: 47vh;
+      z-index: 10;
     }
 
     .download_android {
@@ -64,9 +68,31 @@
       margin-bottom: 20px;
     }
 
+    @media screen and (max-width: 500px) {
+
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+      }
+
+      .download_box {
+        min-width: 320px;
+        height: 100%;
+        min-height: 560px;
+        margin: auto;
+        background: url("./img/bg.jpg") no-repeat;
+        background-size: 100% 100%;
+        background-position: center center;
+        position: relative;
+        text-align: center;
+      }
+    }
+
     .instructions {
       color: red;
-      margin: 20px auto;
+      margin: 0 auto;
     }
 
     .instructions>h5 {
@@ -143,15 +169,15 @@
         <img src="./img/android_btn.png" alt="" srcset="">
       </a>
     </div>
-    <div class="instructions">
-      <h5>IOS用户安装说明</h5>
-      <ol>
-        <li>由于IOS安全机制，首次安装的用户需要进入系统“设置”</li>
-        <li>选择“通用”——“描述文件”或者“设备管理”</li>
-        <li>选择“一个英文的公司名称”，设置为信任</li>
-        <li>点击“信任”完成验证</li>
-      </ol>
-    </div>
+  </div>
+  <div class="instructions">
+    <h5>IOS用户安装说明</h5>
+    <ol>
+      <li>由于IOS安全机制，首次安装的用户需要进入系统“设置”</li>
+      <li>选择“通用”——“描述文件”或者“设备管理”</li>
+      <li>选择“一个英文的公司名称”，设置为信任</li>
+      <li>点击“信任”完成验证</li>
+    </ol>
   </div>
   <div class="weixin-tip">
     <p>
@@ -161,6 +187,7 @@
   <script>
     function is_weixin() {
       var ua = navigator.userAgent.toLowerCase();
+
       if (ua.match(/MicroMessenger/i) == "micromessenger") {
         return true;
       } else {
